--- a/lab3-irm/gbm8378-lab3-irm.ipynb
+++ b/lab3-irm/gbm8378-lab3-irm.ipynb
@@ -840,6 +840,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# On charge le fichier et on récupère les données images\n",
+    "nii_fmri = nib.load('fmri/fmri.nii.gz')\n",
+    "image_fmri = np.array(nii_fmri.dataobj)\n",
     "# On moyenne sur la 4e dimension (le temps)\n",
     "data_mean = np.mean(image_fmri, axis=3)\n",
     "# On crée un nouvel objet nibabel\n",
@@ -1067,7 +1070,7 @@
    "source": [
     "<div class=\"alert alert-block alert-info\">\n",
     "Grâce aux nombreuses directions d'encodage de diffusion acquisent ici, on peut résoudre les 6 inconnues du tenseur de diffusion [D], voxel par voxel. Ce tenseur représente l’ellipsoïde de diffusion, et permet d’indiquer la direction des fibres du tissue dans ce voxel (voir cours) :\n",
-    "    <div>"
+    "</div>"
    ]
   },
   {
@@ -1262,7 +1265,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.10"
+   "version": "3.6.5"
   }
  },
  "nbformat": 4,
