Updated the notebook and the labCTfunctions

--- a/lab1-ct/GBM8378_Lab1_CT_2021.ipynb
+++ b/lab1-ct/GBM8378_Lab1_CT_2021.ipynb
@@ -117,6 +117,8 @@
     "import numpy as np\n",
     "import matplotlib.pyplot as plt\n",
     "import labCTfunctions as labCT\n",
+    "from scipy.ndimage import convolve\n",
+    "from scipy.ndimage.interpolation import rotate\n",
     "from numpy.fft import fft, fft2, fftshift, ifft, ifftshift\n",
     "from skimage.transform import radon, iradon"
    ]
@@ -381,9 +383,18 @@
    "source": [
     "<div class=\"alert alert-warning\">\n",
     "<b>\n",
-    "2. Qu’arrive-t-il si les rétroprojections sont effectuées pour des angles qui ne sont pas régulièrement espacés ? (0.5pt)\n",
+    "2. Qu’arrive-t-il si les rétroprojections sont effectuées pour des angles qui ne sont pas régulièrement espacés ? Illustrez ce phénomène. (0.5pt)\n",
     "</b>\n",
     "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# >>>>> Commencez votre code ici <<<<<"
    ]
   },
   {
@@ -400,9 +411,9 @@
     "## <font color='teal'>Théorème de la tranche centrale – 3pts\t </font>\n",
     "\n",
     "<div class=\"alert alert-warning\">\n",
-    "<b>Montrez que la transformée de Fourier de la projection de l’image pour un angle θ $(1<θ<89)$ est l’équivalent de la tranche d’angle θ de la transformée de Fourier 2D de $f(x, y)$.\n",
+    "<b>Montrez que la transformée de Fourier de la projection de l’image pour un angle θ est l’équivalent de la tranche d’angle θ de la transformée de Fourier 2D de $f(x, y)$.\n",
     "<br><br>\n",
-    "Pour cela, écrivez un script script permettant d’afficher la transformée de Fourier de la projection de l’image pour un angle θ ainsi que la tranche centrale d’angle θ de la transformée de Fourier 2D de $f(x, y)$. Faire la comparaison pour 2 angles différents. Utiliser une échelle logarithmique. Expliquez. (3pt)</b><br>\n",
+    "Pour cela, écrivez un script permettant d’afficher la transformée de Fourier de la projection de l’image pour un angle θ ainsi que la tranche centrale d’angle θ de la transformée de Fourier 2D de $f(x, y)$. Faire la comparaison pour 4 angles différents. Utiliser une échelle logarithmique pour mieux visualiser vos résultats. Expliquez. (3pt)</b><br>\n",
     "\n",
     "Astuce: la fonction [<b>scipy.ndimage.interpolation.rotate</b>](https://docs.scipy.org/doc/scipy-0.14.0/reference/generated/scipy.ndimage.interpolation.rotate.html) permet de rotater une image d'un certain angle.\n",
     "</div>"
@@ -450,7 +461,7 @@
    "source": [
     "<div class=\"alert alert-warning\">\n",
     "<b>\n",
-    "2. Simuler 1000 fois la détection d’un capteur qui a reçu 5 photons (utiliser la fonction random pour générer un vecteur A de 1000 éléments). Tracer l’histogramme des valeurs mesurées par ce capteur (fonction \"plt.hist\"). Refaites l’expérience avec 10, 50, et 1000 photons reçus.  (0.5pt)</b><br>\n",
+    "2. Simuler 1000 fois la détection d’un capteur qui a reçu 5 photons (utiliser une fonction de distribution aléatoire pour générer un vecteur de 1000 éléments). Tracer l’histogramme des valeurs mesurées par ce capteur (fonction \"plt.hist\"). Refaites l’expérience avec 10, 50, et 1000 photons reçus.  (0.5pt)</b><br>\n",
     "    \n",
     "La fonction [<b>numpy.random.poisson</b>](https://numpy.org/doc/stable/reference/random/generated/numpy.random.poisson.html) vous sera utile.\n",
     "\n",
@@ -463,6 +474,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "nb_photons = [5, 10, 50, 1000]\n",
     "# >>>>> Commencez votre code ici <<<<<"
    ]
   },
@@ -483,6 +495,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "lambda_nominal = 100 # Quantité de radiations totale\n",
+    "\n",
     "# >>>>> Commencez votre code ici <<<<<"
    ]
   },
@@ -530,13 +544,13 @@
     "# >>>>> Commencez votre code ici <<<<<\n",
     "\n",
     "plt.figure(figsize=[15,15])\n",
-    "plt.subplot(421); plt.imshow(sino4_bruite); plt.title(f'Sinogramme avec 4 angles, lambda= {str(lambdanominal)}')\n",
-    "plt.subplot(422); plt.imshow(retro4_bruite); plt.title(f'Rétroprojection avec 4 angles, lambda= {str(lambdanominal)}')\n",
-    "plt.subplot(423); plt.imshow(sino16_bruite); plt.title(f'Sinogramme avec 16 angles, lambda= {str(lambda16)}')\n",
+    "plt.subplot(421); plt.imshow(sino4_bruite,aspect='auto'); plt.title(f'Sinogramme avec 4 angles, lambda= {str(lambda4)}')\n",
+    "plt.subplot(422); plt.imshow(retro4_bruite,); plt.title(f'Rétroprojection avec 4 angles, lambda= {str(lambda4)}')\n",
+    "plt.subplot(423); plt.imshow(sino16_bruite,aspect='auto'); plt.title(f'Sinogramme avec 16 angles, lambda= {str(lambda16)}')\n",
     "plt.subplot(424); plt.imshow(retro16_bruite); plt.title(f'Rétroprojection avec 16 angles, lambda= {str(lambda16)}')\n",
-    "plt.subplot(425); plt.imshow(sino90_bruite); plt.title(f'Sinogramme avec 90 angles, lambda= {str(lambda90)}')\n",
+    "plt.subplot(425); plt.imshow(sino90_bruite,aspect='auto'); plt.title(f'Sinogramme avec 90 angles, lambda= {str(lambda90)}')\n",
     "plt.subplot(426); plt.imshow(retro90_bruite); plt.title(f'Rétroprojection avec 90 angles, lambda=, {str(lambda90)}')\n",
-    "plt.subplot(427); plt.imshow(sino180_bruite); plt.title(f'Sinogramme avec 180 angles, lambda= {str(lambda180)}')\n",
+    "plt.subplot(427); plt.imshow(sino180_bruite,aspect='auto'); plt.title(f'Sinogramme avec 180 angles, lambda= {str(lambda180)}')\n",
     "plt.subplot(428); plt.imshow(retro180_bruite); plt.title(f'Rétroprojection avec 180 angles, lambda= {str(lambda180)}');"
    ]
   },
@@ -578,7 +592,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.11"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
