Deleted lab0 related sections

--- a/lab3-irm/gbm8378-lab3-irm.ipynb
+++ b/lab3-irm/gbm8378-lab3-irm.ipynb
@@ -54,36 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "c:\\users\\gaspa\\miniconda3\\envs\\env-gbm8378\\lib\\site-packages\\dicom\\__init__.py:53: UserWarning: \n",
-      "This code is using an older version of pydicom, which is no longer \n",
-      "maintained as of Jan 2017.  You can access the new pydicom features and API \n",
-      "by installing `pydicom` from PyPI.\n",
-      "See 'Transitioning to pydicom 1.x' section at pydicom.readthedocs.org \n",
-      "for more information.\n",
-      "\n",
-      "  warnings.warn(msg)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
+    "import copy\n",
     "import nibabel as nib\n",
     "import pydicom as pycd\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
+    "import nilearn.plotting as nip;\n",
+    "import numpy as np\n",
     "import dicom\n",
     "from numpy.fft import *\n",
+    "from numpy.matlib import *\n",
     "from numpy import matlib as mb\n",
-    "import numpy as np\n",
-    "import copy\n",
     "from niwidgets import NiftiWidget\n",
-    "import nilearn.plotting as nip\n",
     "\n",
     "%matplotlib inline"
    ]
@@ -261,24 +247,8 @@
     "des fréquences spatiales. Pour étudier ce phénomène suivez les instructions ci dessous :<br>\n",
     "● Faites la transformée de Fourier 2D (fonction <code>fft2</code>) de l’image de magnitude <code>FourierTransform_Test01-03-0011.dcm</code>.<br>\n",
     "● Sous-échantillonnez cette transformée par un facteur 2 selon les deux axes (u et v).\n",
-    "Pour conserver la taille de la matrice (256x256), remplacer une ligne sur deux par des 0.<br>   \n",
+    "Pour conserver la taille de la matrice (256x256), remplacer un élément sur deux par des 0. Au final, vous devez avoir conservé la moitié des valeurs de la FFT originale.<br>   \n",
     "● Faites la transformée inverse.<br>\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>ATTENTION:</b> En python l'indexation commence à 0.\n",
-    "\n",
-    "Les matrices sont definies comme suit <code>m=[[0,0],[1,1]]</code>. Ceci donne une matrice avec une premiere ligne de 0 et une seconde ligne de 1.\n",
-    "\n",
-    "L'equivalent de <code>repmat</code> en Python se trouve dans <code>numpy.matlib</code>, que nous avons importé comme : <code>mb</code>. La fonction est donc : <code>mb.repmat(m,Nb_ligne,Nb_colonne)</code>\n",
-    "\n",
-    "Pour notre matrice 'm' la taille peut être obtenue à l'aide de <code>m.shape</code> qui renverra (2,2).<br>\n",
-    "Les fonctions de type <code>abs,real</code> Peuvent être utilisées comme en Matlab. \n",
     "</div>"
    ]
   },
@@ -397,36 +367,6 @@
    "source": [
     "<div class=\"alert alert-block alert-warning\">\n",
     "    3.1.2. Implémentez cette procédure en utilisant <code>FourierTransform_Test01-03-0011.dcm</code> et simulez trois types de spiking artefacts : horizontal, vertical et oblique.  1.5pts\n",
-    "</div>"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "<div class=\"alert alert-block alert-danger\">\n",
-    "<b>ATTENTION : Comment copier une matrice d'une variable vers une autre variable dans Python.</b>\n",
-    "\n",
-    "Illustration avec le code suivant :\n",
-    "    \n",
-    "    a = [0, 0]\n",
-    "    b = a\n",
-    "    b[0] = 1\n",
-    "    print(a[0])\n",
-    "    >> 1  # au lieu de 0 !!!\n",
-    "\n",
-    "Cela est dû au fait que cette opération repose sur des pointeurs.<br>\n",
-    "La solution pour éviter cela est d'utiliser la fonction <code>deepcopy</code> : \n",
-    "\n",
-    "    import copy\n",
-    "    b = copy.deepcopy(a)\n",
-    "\n",
-    "Cela pourra vous être utile pour copier la matrice afin de simuler plusieurs artefacts.\n",
-    "Si vous souhaitez revenir dans le k-space, utilisez une transformée de Fourier inverse :\n",
-    "\n",
-    "    ifft2\n",
-    "\n",
-    "Ne pas oublier de prendre en compte le shift. \n",
     "</div>"
    ]
   },
@@ -721,7 +661,7 @@
     "# Note: Utilisez les sliders pour vous déplacer. Une fois que vous avez cliqué sur un slider, vous pouvez utiliser\n",
     "# les flèches gauche/droite pour bouger le slider.\n",
     "fmri_widget = NiftiWidget('fmri/fmri.nii.gz')\n",
-    "fmri_widget.nifti_plotter(colormap='nipy_spectral', display_mode=['ortho', 'xz'])"
+    "fmri_widget.nifti_plotter(colormap='nipy_spectral', display_mode=['ortho', 'xz']);"
    ]
   },
   {
