Updated points distribution

--- a/lab3-irm/gbm8378-lab3-irm.ipynb
+++ b/lab3-irm/gbm8378-lab3-irm.ipynb
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -63,7 +63,7 @@
     "import pydicom as pycd\n",
     "import matplotlib.pyplot as plt\n",
     "import math\n",
-    "import nilearn.plotting as nip;\n",
+    "import nilearn.plotting as nip\n",
     "import numpy as np\n",
     "import dicom\n",
     "from numpy.fft import *\n",
@@ -672,6 +672,8 @@
     "5.1.1 Comment se fait-il que le cerveau apparaisse \"applati\" dans la direction supérieure-inférieure ?\n",
     "    \n",
     "Astuce: Étudiez le header de l'image NIfTI en l'ouvrant avec nibabel.\n",
+    "    \n",
+    "   1pt\n",
     "</div>"
    ]
   },
@@ -1070,6 +1072,8 @@
     "$y=H.d$, avec $d=[Dxx Dyy Dzz Dxy Dxz Dyz]^T$\n",
     "- Résoudre cette équation surdéterminée voxel par voxel (voir “pseudo-solution” sur\n",
     "internet)\n",
+    "    \n",
+    "4pts\n",
     "     </div>"
    ]
   },
