--- a/lab2-us/gbm8378-lab2-us.ipynb
+++ b/lab2-us/gbm8378-lab2-us.ipynb
@@ -190,6 +190,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "plt.figure(figsize=[8, 8])\n",
     "# Commencer votre solution ici (7 lignes max)\n",
     "# Correction du changement d'intensité\n",
     "\n",
@@ -480,7 +481,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.4"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
