added links for markdown/latex

--- a/lab0-intro/GBM8378_Lab0_Intro.ipynb
+++ b/lab0-intro/GBM8378_Lab0_Intro.ipynb
@@ -126,6 +126,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "###  Autres ressources\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "Pour écrire les réponse vous pouvez regarder:<ul> <a href=\"https://support.squarespace.com/hc/fr-fr/articles/206543587-Aide-m%C3%A9moire-Markdown\">Markdown basic</a> <br>\n",
+    "<a href=\"https://github.com/cben/mathdown/wiki/math-in-markdown \">Math in markdown</a>\n",
+    "<br>\n",
+    "    Vous pouvez introduire des équations en latex dont l'utilisation est détaillée <a href=\"https://en.wikibooks.org/wiki/LaTeX/Mathematics \">ici</a>.\n",
+    "    <br></ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#  Qu'est-ce que Python ?\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
