--- a/lab2-us/gbm8378-lab2-us.ipynb
+++ b/lab2-us/gbm8378-lab2-us.ipynb
@@ -375,8 +375,8 @@
    "source": [
     "# Charger H2 \n",
     "H2 = np.load('H2.npy')\n",
-    "# Interpolate between 0 and 50 Mhz\n",
-    "nbpts = 2048 # Nombre de données acquises par 1 transducteur\n",
+    "# Interpoler entre 0 et 50 Mhz\n",
+    "nbpts = 2048  # Nombre de données acquises par 1 transducteur\n",
     "H2 = np.interp(np.linspace(0, 50, nbpts // 2 + 1), np.linspace(0, 30, len(H2)), H2, left=0, right=0)\n",
     "H2 = np.concatenate((H2[-1:0:-1], H2[:-1]))\n",
     "\n",
@@ -398,7 +398,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\">Que se passe-t-il au niveau des bords supérieurs et inférieurs? 1pt </div>\n",
+    "<div class=\"alert alert-block alert-warning\">Que se passe-t-il au niveau des bords supérieurs et inférieurs ? 1pt </div>\n",
     "\n"
    ]
   },
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\">À quoi correspondent les barres horizontales visibles sur une partie de l’image? 1pt\n",
+    "<div class=\"alert alert-block alert-warning\">À quoi correspondent les barres horizontales visibles sur une partie de l’image ? 1pt\n",
     "    </div>"
    ]
   },
