--- a/lab0-intro/GBM8378_Lab0_Intro.ipynb
+++ b/lab0-intro/GBM8378_Lab0_Intro.ipynb
@@ -149,6 +149,10 @@
     "Au cours de cette séance, nous allons nous familiariser progressivement avec les outils offert par Python.\n",
     "    \n",
     "<b> Utiliser Python dans un Jupyter Notebook requièrent certaines étapes d'initialisation. Encore une fois, si vous utilisez MyBinder, ces étapes pourront être sautées et vous n'aurez plus qu'à coder !</b>\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-block alert-info\">\n",
+    "Si vous souhaitez apprendre les bases de Python en suivant des tutoriels vidéos, des tutoriels faits par un étudiant de Polytechnique sont disponibles sur sa <a href=\"https://www.youtube.com/watch?v=6IjvPsbofRc&list=PLnzBBbvhjz4X3htDbNF0aJEDVtny48GI0\"> chaîne YouTube </a>.\n",
     "</div>"
    ]
   },
@@ -745,7 +749,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.12"
+   "version": "3.7.9"
   }
  },
  "nbformat": 4,
