--- a/lab0-intro/GBM8378_Lab0_Intro.ipynb
+++ b/lab0-intro/GBM8378_Lab0_Intro.ipynb
@@ -85,17 +85,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Hello World!\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Ceci est une cellule de code\n",
     "print('Hello World!') # La fonction Python \"print()\" permet de retourner une chaîne de caractères en dessous de la cellule"
@@ -152,7 +144,7 @@
     "</div>\n",
     "\n",
     "<div class=\"alert alert-block alert-info\">\n",
-    "Si vous souhaitez apprendre les bases de Python en suivant des tutoriels vidéos, des tutoriels faits par un étudiant de Polytechnique sont disponibles sur sa <a href=\"https://www.youtube.com/watch?v=6IjvPsbofRc&list=PLnzBBbvhjz4X3htDbNF0aJEDVtny48GI0\"> chaîne YouTube </a>.\n",
+    "Si vous souhaitez apprendre les bases de Python en suivant des tutoriels vidéos, des tutoriels faits par Guillaume Sheehy, un étudiant de Polytechnique, sont disponibles sur sa <a href=\"https://www.youtube.com/watch?v=6IjvPsbofRc&list=PLnzBBbvhjz4X3htDbNF0aJEDVtny48GI0\"> chaîne YouTube </a>.\n",
     "</div>"
    ]
   },
@@ -171,19 +163,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Le cosinus de pi vaut: -1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "print(\"Le cosinus de pi vaut:\", np.cos(np.pi)) "
@@ -199,17 +183,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Le cosinus de pi vaut: -1.0\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from numpy import cos, pi\n",
     "print(\"Le cosinus de pi vaut:\", cos(pi)) "
@@ -240,20 +216,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Le premier élement de X est: 1\n",
-      "Le dernier élement de X est: 9\n",
-      "La liste des élements de X est: [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
-      "A partir de l'index 3 et jusqu'à l'index 7, prendre un élement sur 2 : [4, 6]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "X = [1, 2, 3, 4, 5, 6, 7, 8, 9]\n",
     "print(f'Le premier élement de X est: {X[0]}')\n",
@@ -275,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -295,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
