--- a/lab1-ct/GBM8378_Lab1_CT_2021.ipynb
+++ b/lab1-ct/GBM8378_Lab1_CT_2021.ipynb
@@ -124,7 +124,9 @@
     "from scipy.ndimage import convolve\n",
     "from scipy.ndimage.interpolation import rotate\n",
     "from numpy.fft import fft, fft2, fftshift, ifft, ifftshift\n",
-    "from skimage.transform import radon, iradon"
+    "from skimage.transform import radon, iradon\n",
+    "\n",
+    "%matplotlib inline"
    ]
   },
   {
@@ -562,7 +564,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
