Added questions + colorbars

--- a/lab2-us/GBM8378_Lab2_US_2021.ipynb
+++ b/lab2-us/GBM8378_Lab2_US_2021.ipynb
@@ -64,7 +64,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -521,7 +520,6 @@
    ]
   },
   {
-   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -559,32 +557,32 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['pitch']    = 0.5*1e-3                                                  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)                                        # Width of element (m)\n",
-    "prm['height']   = 1.5*1e-3                                                  # Height of element (m)\n",
-    "prm['nele']     = 1                                                         # Number of elements\n",
-    "prm['BW']       = .5                                                        # 50% Bandwidth\n",
-    "prm['eleBW']    = 1                                                         # 100% Bandwidth\n",
-    "prm['hardbaffle'] = True                                                    # Use hard baffle =True or soft baffle =False\n",
-    "prm['fc']       = 14e6                                                      # Central frequency of the transducer (Hz)\n",
+    "prm['pitch'] = 0.5*1e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width'] = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['height'] = 1.5*1e-3  # Height of element (m)\n",
+    "prm['nele'] = 1  # Number of elements\n",
+    "prm['BW'] = .5  # 50% Bandwidth\n",
+    "prm['eleBW'] = 1  # 100% Bandwidth\n",
+    "prm['hardbaffle'] = True  # Use hard baffle =True or soft baffle =False\n",
+    "prm['fc'] = 14e6  # Central frequency of the transducer (Hz)\n",
     "\n",
     "## MEDIUM\n",
-    "prm['c']        = 1540                                                      # Propagation velocity (m/s)\n",
-    "prm['lbd']      = prm['c']/prm['fc']                                        # Wavelenght (m)\n",
+    "prm['c'] = 1540  # Propagation velocity (m/s)\n",
+    "prm['lbd'] = prm['c']/prm['fc']  # Wavelenght (m)\n",
     "\n",
     "## IMAGING SEQUENCE\n",
-    "prm['fs']       = 4 * prm['fc']                                             # Sampling frequency of the system (Hz)\n",
+    "prm['fs'] = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
     "prm['elevfocus'] = 64 * prm['lbd']\n",
-    "prm['fspulse'] = 10*prm['fs']                                               # Sampling frequency for the pulse (Hz)\n",
-    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse'])) # Pulse shape\n",
-    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)                                                     # Pulse Shape\n",
-    "prm['planewaveangle'] = 0                                                   # Plane wave emission angle (degrees)\n",
+    "prm['fspulse'] = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
+    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
+    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)  # Pulse Shape\n",
+    "prm['planewaveangle'] = 0  # Plane wave emission angle (degrees)\n",
     "\n",
     "## SIMULATION\n",
-    "prm['useprobeheight'] = False                                               # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256                                                       # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['pitch'] * 25.6                                           # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 128                                              # Axial field of view (m)\n",
+    "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
+    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
+    "prm['fovx'] = prm['pitch'] * 25.6  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "\n",
     "#############\n",
     "### SETUP ###\n",
@@ -678,32 +676,32 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['pitch']    = 0.5*1e-3                                                  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)                                        # Width of element (m)\n",
-    "prm['height']   = 1.5*1e-3                                                  # Height of element (m)\n",
-    "prm['nele']     = 1                                                         # Number of elements\n",
-    "prm['BW']       = .5                                                        # 50% Bandwidth\n",
-    "prm['eleBW']    = 1                                                         # 100% Bandwidth\n",
-    "prm['hardbaffle'] = True                                                    # Use hard baffle =True or soft baffle =False\n",
-    "prm['fc']       = 14e6                                                      # Central frequency of the transducer (Hz)\n",
+    "prm['pitch'] = 0.5*1e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width'] = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['height'] = 1.5*1e-3  # Height of element (m)\n",
+    "prm['nele'] = 1  # Number of elements\n",
+    "prm['BW'] = .5  # 50% Bandwidth\n",
+    "prm['eleBW'] = 1  # 100% Bandwidth\n",
+    "prm['hardbaffle'] = True  # Use hard baffle =True or soft baffle =False\n",
+    "prm['fc'] = 14e6  # Central frequency of the transducer (Hz)\n",
     "\n",
     "## MEDIUM\n",
-    "prm['c']        = 1540                                                      # Propagation velocity (m/s)\n",
-    "prm['lbd']      = prm['c']/prm['fc']                                        # Wavelenght (m)\n",
+    "prm['c'] = 1540  # Propagation velocity (m/s)\n",
+    "prm['lbd'] = prm['c']/prm['fc']  # Wavelenght (m)\n",
     "\n",
     "## IMAGING SEQUENCE\n",
-    "prm['fs']       = 4 * prm['fc']                                             # Sampling frequency of the system (Hz)\n",
+    "prm['fs'] = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
     "prm['elevfocus'] = 64 * prm['lbd']\n",
-    "prm['fspulse'] = 10*prm['fs']                                               # Sampling frequency for the pulse (Hz)\n",
-    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse'])) # Pulse shape\n",
-    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)                                                     # Pulse Shape\n",
-    "prm['planewaveangle'] = 0                                                   # Plane wave emission angle (degrees)\n",
+    "prm['fspulse'] = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
+    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
+    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)  # Pulse Shape\n",
+    "prm['planewaveangle'] = 0  # Plane wave emission angle (degrees)\n",
     "\n",
     "## SIMULATION\n",
-    "prm['useprobeheight'] = False                                               # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256                                                       # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['pitch'] * 25.6                                           # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 128                                              # Axial field of view (m)\n",
+    "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
+    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
+    "prm['fovx'] = prm['pitch'] * 25.6  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "\n",
     "#############\n",
     "### SETUP ###\n",
@@ -742,7 +740,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.5. Toujours avec 10 éléments, faire une fonction qui viendra modifier le vecteur 'delays' afin d’obtenir une onde plane à un angle de 10°. Affichez le front d’onde après 5µs. (2pts) </b><br>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.5. Toujours avec 10 éléments, faire une fonction qui viendra modifier le vecteur 'delays' afin d’obtenir une onde plane à un angle de 10°. Affichez le front d’onde après 5µs. (1.5pts) </b><br>\n",
     "Delays prend des valeurs en s. </div>"
    ]
   },
@@ -758,32 +756,32 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['pitch']    = 0.5*1e-3                                                  # Spacing between the center of 2 elements (m)\n",
-    "prm['width']    = 0.8117*1540/(14e6)                                        # Width of element (m)\n",
-    "prm['height']   = 1.5*1e-3                                                  # Height of element (m)\n",
-    "prm['nele']     = 1                                                         # Number of elements\n",
-    "prm['BW']       = .5                                                        # 50% Bandwidth\n",
-    "prm['eleBW']    = 1                                                         # 100% Bandwidth\n",
-    "prm['hardbaffle'] = True                                                    # Use hard baffle =True or soft baffle =False\n",
-    "prm['fc']       = 14e6                                                      # Central frequency of the transducer (Hz)\n",
+    "prm['pitch'] = 0.5*1e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width'] = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['height'] = 1.5*1e-3  # Height of element (m)\n",
+    "prm['nele'] = 1  # Number of elements\n",
+    "prm['BW'] = .5  # 50% Bandwidth\n",
+    "prm['eleBW'] = 1  # 100% Bandwidth\n",
+    "prm['hardbaffle'] = True  # Use hard baffle =True or soft baffle =False\n",
+    "prm['fc'] = 14e6  # Central frequency of the transducer (Hz)\n",
     "\n",
     "## MEDIUM\n",
-    "prm['c']        = 1540                                                      # Propagation velocity (m/s)\n",
-    "prm['lbd']      = prm['c']/prm['fc']                                        # Wavelenght (m)\n",
+    "prm['c'] = 1540  # Propagation velocity (m/s)\n",
+    "prm['lbd'] = prm['c']/prm['fc']  # Wavelenght (m)\n",
     "\n",
     "## IMAGING SEQUENCE\n",
-    "prm['fs']       = 4 * prm['fc']                                             # Sampling frequency of the system (Hz)\n",
+    "prm['fs'] = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
     "prm['elevfocus'] = 64 * prm['lbd']\n",
-    "prm['fspulse'] = 10*prm['fs']                                               # Sampling frequency for the pulse (Hz)\n",
-    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse'])) # Pulse shape\n",
-    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)                                                     # Pulse Shape\n",
-    "prm['planewaveangle'] = 0                                                   # Plane wave emission angle (degrees)\n",
+    "prm['fspulse'] = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
+    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
+    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)  # Pulse Shape\n",
+    "prm['planewaveangle'] = 0  # Plane wave emission angle (degrees)\n",
     "\n",
     "## SIMULATION\n",
-    "prm['useprobeheight'] = False                                               # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256                                                       # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['pitch'] * 25.6                                           # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 128                                              # Axial field of view (m)\n",
+    "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
+    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
+    "prm['fovx'] = prm['pitch'] * 25.6  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "\n",
     "#############\n",
     "### SETUP ###\n",
@@ -844,7 +842,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.8. Adaptez le paramètre 'delays' afin d'effectuer un focus en x=3mm et z=8mm. Expliquez vos résultats. (2pts)</b>\n",
+    "<div class=\"alert alert-block alert-warning\"><b>4.8. Adaptez le paramètre 'delays' afin d'effectuer un focus en x=3mm et z=8mm. Expliquez vos résultats. (1.5pts)</b>\n",
     "</div>"
    ]
   },
@@ -860,33 +858,32 @@
     "\n",
     "## PROBE\n",
     "prm = {}\n",
-    "prm['pitch']    = 0.5*1e-3                                                  # Spacing between the center of 2 elements (m)<div class=\"alert alert-block alert-warning\"><b>4.8. Adaptez le paramètre 'delays' afin d'effectuer un focus en x=3mm et z=8mm. Afin de visualiser le focus en ce point, intégrez votre signal dans le temps et affichez l'image ainsi obtenue. Expliquez vos résultats. (2pts)</b>\n",
-    "</div>\n",
-    "prm['width']    = 0.8117*1540/(14e6)                                        # Width of element (m)\n",
-    "prm['height']   = 1.5*1e-3                                                  # Height of element (m)\n",
-    "prm['nele']     = 1                                                         # Number of elements\n",
-    "prm['BW']       = .5                                                        # 50% Bandwidth\n",
-    "prm['eleBW']    = 1                                                         # 100% Bandwidth\n",
-    "prm['hardbaffle'] = True                                                    # Use hard baffle =True or soft baffle =False\n",
-    "prm['fc']       = 14e6                                                      # Central frequency of the transducer (Hz)\n",
+    "prm['pitch'] = 0.5*1e-3  # Spacing between the center of 2 elements (m)\n",
+    "prm['width'] = 0.8117*1540/(14e6)  # Width of element (m)\n",
+    "prm['height'] = 1.5*1e-3  # Height of element (m)\n",
+    "prm['nele'] = 1  # Number of elements\n",
+    "prm['BW'] = .5  # 50% Bandwidth\n",
+    "prm['eleBW'] = 1  # 100% Bandwidth\n",
+    "prm['hardbaffle'] = True  # Use hard baffle =True or soft baffle =False\n",
+    "prm['fc'] = 14e6  # Central frequency of the transducer (Hz)\n",
     "\n",
     "## MEDIUM\n",
-    "prm['c']        = 1540                                                      # Propagation velocity (m/s)\n",
-    "prm['lbd']      = prm['c']/prm['fc']                                        # Wavelenght (m)\n",
+    "prm['c'] = 1540  # Propagation velocity (m/s)\n",
+    "prm['lbd'] = prm['c']/prm['fc']  # Wavelenght (m)\n",
     "\n",
     "## IMAGING SEQUENCE\n",
-    "prm['fs']       = 4 * prm['fc']                                             # Sampling frequency of the system (Hz)\n",
+    "prm['fs'] = 4 * prm['fc']  # Sampling frequency of the system (Hz)\n",
     "prm['elevfocus'] = 64 * prm['lbd']\n",
-    "prm['fspulse'] = 10*prm['fs']                                               # Sampling frequency for the pulse (Hz)\n",
-    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse'])) # Pulse shape\n",
-    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)                                                     # Pulse Shape\n",
-    "prm['planewaveangle'] = 0                                                   # Plane wave emission angle (degrees)\n",
+    "prm['fspulse'] = 10*prm['fs']  # Sampling frequency for the pulse (Hz)\n",
+    "prm['pulse'] = np.sin(2*np.pi*prm['fc']*np.arange(0, 2/prm['BW']/prm['fc']+1/prm['fspulse'], 1/prm['fspulse']))\n",
+    "prm['pulse'] = prm['pulse'] * np.hanning(prm['pulse'].size)  # Pulse Shape\n",
+    "prm['planewaveangle'] = 0  # Plane wave emission angle (degrees)\n",
     "\n",
     "## SIMULATION\n",
-    "prm['useprobeheight'] = False                                               # Take probe height into account =True or not =False\n",
-    "prm['gridsize'] = 256                                                       # Number of samples per side of the grid\n",
-    "prm['fovx'] = prm['pitch'] * 25.6                                           # Lateral field of view (m)\n",
-    "prm['fovz'] = prm['lbd'] * 128                                              # Axial field of view (m)\n",
+    "prm['useprobeheight'] = False  # Take probe height into account =True or not =False\n",
+    "prm['gridsize'] = 256  # Number of samples per side of the grid\n",
+    "prm['fovx'] = prm['pitch'] * 25.6  # Lateral field of view (m)\n",
+    "prm['fovz'] = prm['lbd'] * 128  # Axial field of view (m)\n",
     "\n",
     "#############\n",
     "### SETUP ###\n",
@@ -925,7 +922,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "<div class=\"alert alert-block alert-warning\"><b>4.9. Quel est l’intérêt de pouvoir diriger l’onde? (0.5pt)</b></div> "
+    "<div class=\"alert alert-block alert-warning\"><b>4.9. Sur la figure de droite, en dehors du point de focalisation, nous observons des zones présentant de fortes intensités acoustiques (e.g. [x=1mm, z=9mm]). A quoi cela est-il-dû ? (0.5pt)\n",
+    "</b></div> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\"> <b> Double-cliquez pour entrez votre réponse. </b> </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\"><b>4.10. Quel est l’intérêt de pouvoir diriger l’onde? (0.5pt)</b></div> "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-success\"> <b> Double-cliquez pour entrez votre réponse. </b> </div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-block alert-warning\"><b>4.11. En faisant suite à la question 4.9, on observe que les zones non focalisées présentent une intensité acoustique du même ordre de grandeur que l'intensité en [x=3mm, z=8mm]. Comment expliquez-vous que, malgré cela, on puisse obtenir une image de qualité satisfaisante en mode B. (0.5pt)</b></div> "
    ]
   },
   {
